[metadata]
name = pyremaid
version = 0.0.1
author = Michael Reel
description = Exporation in creating Mermaid documentation for python code
long_description = file: README.md
long_description_content_type = text/markdown
ulr = https://github.com/MichaelReel/pyremaid
project_urls =
    Bug Tracker = https://github.com/MichaelReel/pyremaid/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
